updated a bunch of question asking stuff

--- a/Ask/README
+++ b/Ask/README
@@ -56,3 +56,6 @@ Sources
 List any sources that we used.
 
   - http://www.nltk.org/book/
+  - http://nodebox.net/code/index.php/Linguistics
+  - http://www.ark.cs.cmu.edu/mheilman/questions/ - specifically Java parse server
+  - 
